feat: binary component builds (#681)
* feat: binary component builds w/ nuitka

* chore: fix nuitka script location

* fix: build tools and path handling

* chore: build updates for nuitka

* chore: more build fixes

* chore: rag build fixes

* chore: nuitka build fixes

* fix(build): lib exclusions and configs

* chore: refactor universal runtime layout

* fix: nuitka build issues on some platforms

* chore: drop support for macos intel builds

* chore: pr fixups

* chore: build optimizations

* chore: build fixes

* chore: test linux builds on larger machine

* chore: poc of pyapp build

* feat(deploy): use pyapp for bundling

* chore: remove nuitka remnants

* fix(deploy): pyapp cache validation and runtime lint errors

Fix PyApp source cache check to verify Cargo.toml exists, not just the
directory (CI cargo cache restores target/ subdirs which creates the
parent dir without source files). Fix ruff F821 lint error in
document_model.py by adding TYPE_CHECKING guard for torch import.

* feat(deploy): version built artifacts

* fix(rag): improve processing resilience when warming embedding models

* feat(deploy): add binary handling to cli

* chore: pr fixups

* chore: binary build fixes

* chore: pr fixups

* chore: ensure e2e binary tests wait for latest build

* fix(deploy): fallback to windows home vars

* fix(deploy): handle Path.home() failure in embedded Python

Path.home() raises RuntimeError in PyApp-embedded Python on Windows
when HOME/USERPROFILE env vars are absent during bootstrap. This
affects both server and runtime binaries.

- Add utils/safe_home.py to runtime with safe fallback chain
- Fix all Path.home() calls in server (ml_model_service, designer,
  disk_space_service) and runtime (state, path_validator,
  classifier_model, anomaly_model, server)
- Skip classifier fit test in CI (segfaults in accelerate memory
  cleanup on runners without GPU)

* fix(runtime): move safe_home imports to top of file

Fix ruff E402 lint errors by moving the utils.s

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -234,7 +234,24 @@ jobs:
           PYTHONPATH: ${{ github.workspace }}
         run: |
           # Exclude e2e tests (they require running services)
-          uv run pytest -v -m "not e2e" --cov=. --cov-report=term-missing
+          # Use junitxml so we can verify test results even if the process crashes
+          set +e
+          uv run pytest -v -m "not e2e" --cov=. --cov-report=term-missing --junitxml=test-results.xml
+          EXIT_CODE=$?
+          set -e
+
+          if [ "$EXIT_CODE" -eq 139 ]; then
+            echo "⚠️ Process exited with SIGSEGV (139) during shutdown"
+            if [ -f test-results.xml ] && grep -q 'failures="0"' test-results.xml && grep -q 'errors="0"' test-results.xml; then
+              echo "All tests passed before the crash — treating as success (known native library shutdown issue)"
+              exit 0
+            else
+              echo "Tests had failures or errors before the crash"
+              exit 1
+            fi
+          fi
+
+          exit "$EXIT_CODE"
 
       - name: Skip tests (no tests found)
         if: steps.check-tests.outputs.has_tests == 'false'
