feat: support structured outputs (#724)
* feat: use schema for output

* chore: verify loaded class is pydantic basemodel subclass

* fix: path handling for schema scaffold

* fix: add validation timeouts

* fix: add title to schema to prevent name changing after data generation

* chore: update documentation

* chore: add test for structured output

* chore: update counter in test

* fix: flush initial chunk before modal loading

* fix: add pydantic to dependencies

* fix: the test mocking to patch at the correct module level

* fix: the E2E test dependency resolution failure by changing the UV index strategy

* chore: regenerate uv lock so markupsafe now resolves from PyPI and no PyTorch registry URLs appear

* chore: regenerate lockfile with cp312 wheels

* chore: ruff linting

* chore: updated enum pattern

* chore: indentation

* fix: move prepare generation before sse generation starts

* fix: update both workflows and fix comments so they match behavior

* fix: structured output tool conflict in openai client

* fix: add missing schema field to llamafarmconfig model

* fix: move schema extration into shared parser helper

* chore: add debug log at the structured output branch

* fix: replace direct assignment fallback with explicit guard

* chore: add comment about schemas directory

* fix: tool strategy logic runs if not self._response_model

* feat: reusable benchmark runner

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -189,10 +189,12 @@ jobs:
           # For universal runtime, use CPU-only PyTorch to avoid downloading 3GB+ of CUDA packages
           UV_EXTRA_INDEX_URL: ${{ matrix.component == 'runtimes/universal' && 'https://download.pytorch.org/whl/cpu' || '' }}
         run: |
-          # For universal runtime, allow uv to search all indexes (PyTorch index has old versions of common packages)
+          # For universal runtime, prefer the first index with a compatible version.
+          # This keeps CPU torch from the PyTorch index while still falling back to PyPI when
+          # the PyTorch index has incompatible or missing versions of common dependencies.
           INDEX_STRATEGY_FLAG=""
           if [ "${{ matrix.component }}" = "runtimes/universal" ]; then
-            INDEX_STRATEGY_FLAG="--index-strategy unsafe-best-match"
+            INDEX_STRATEGY_FLAG="--index-strategy unsafe-first-match"
           fi
           
           if [ -f "uv.lock" ]; then
