--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
   "six>=1.16.0",
   "requests>=2.32.5,<3.0.0",
   "httpx[http2]>=0.25.0",
+  "markupsafe>=2.1.0,<3.1",
   "mcp>=1.2.0",
   "structlog>=25.4.0",
   "asgi-correlation-id>=4.3.4",
